--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-white min-vh-100" style="width: 280px;">
             <span class="mb-4">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="logo fs-4"> {% bs_icon 'alt' size="1.5rem" color="green" %} <span class="ps-1 fw-bold">LNT</span></span>
+                    {% include 'logo.html' %}
                 </a>
             </span>
             <ul class="nav nav-pills flex-column mb-auto">
@@ -78,7 +78,7 @@
                 <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                     id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                    <strong>mdo</strong>
+                    <strong>{{request.user.email}}</strong>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                     <li><a class="dropdown-item" href="#">Settings</a></li>
@@ -86,7 +86,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
                 </ul>
             </div>
         </div>
