style: switch login & sign up btn colors

--- a/templates/login.html
+++ b/templates/login.html
@@ -52,7 +52,7 @@
 
                 {% bootstrap_form form %}
 
-                <button class="btn btn-primary w-100">Login</button>
+                <button class="btn btn-success w-100">Login</button>
             </form>
 
             <p class="small my-2">or</p>
