--- a/templates/base.html
+++ b/templates/base.html
@@ -25,15 +25,15 @@
 <body>
 
     <section class="landing d-flex">
-        <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-white min-vh-100" style="width: 280px;">
+        <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-light min-vh-100" style="width: 280px;">
             <span class="mb-4">
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-light text-decoration-none">
                     {% include 'logo.html' %}
                 </a>
             </span>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">
+                    <a href="#" class="nav-link text-light" aria-current="page">
                         <svg class="bi me-2" width="16" height="16">
                             {% bs_icon 'house' %}
                         </svg>
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="#" class="nav-link text-light">
                         <svg class="bi me-2" width="16" height="16">
                             {% bs_icon 'speedometer2' %}
                         </svg>
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="#" class="nav-link text-light">
                         <svg class="bi me-2" width="16" height="16">
                             {% bs_icon 'table' %}
                         </svg>
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="#" class="nav-link text-light">
                         <svg class="bi me-2" width="16" height="16">
                             {% bs_icon 'grid' %}
                         </svg>
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="#" class="nav-link text-light">
                         <svg class="bi me-2" width="16" height="16">
                             {% bs_icon 'cash-coin' %}
                         </svg>
@@ -75,7 +75,7 @@
             </ul>
             <hr>
             <div class="dropdown">
-                <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+                <a href="#" class="d-flex align-items-center text-light text-decoration-none dropdown-toggle"
                     id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
                     <strong>{{request.user.email}}</strong>
