--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
 
                 {% bootstrap_form form %}
 
-                <button class="btn btn-success w-100">Sign up</button>
+                <button class="btn btn-primary w-100">Sign up</button>
             </form>
 
             <p class="small my-2">or</p>
