--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,169 @@
 {% extends 'base.html' %}
+{% load bootstrap_icons %}
+{% load static %}
 
 {% block title %}
+<title>Dashboard</title>
 {% endblock title %}
 
+{% block styles %}
+{{block.super}}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
+<link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+{% endblock styles %}
+
 {% block content %}
-<h1>Dashboard</h1>
+<div class="top-bar">
+    <div class="container d-flex justify-content-between align-items-center pt-3">
+        <p class="fs-5">Your Loans dashboard</p>
+        <p class="fs-5 bg-success rounded fw-bold text-light p-2">
+            Total KES 1,050
+            <span class="ms-2">{% bs_icon 'patch-question' size="1.4rem" %}</span>
+        </p>
+    </div>
+    <hr>
+</div>
+
+<div class="container">
+    <div class="loans-profile mb-3">
+        <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <p>Loans Profile</p>
+                <p>{% bs_icon 'patch-question' size="1.4rem" %}</p>
+            </div>
+
+            <div class="card-body">
+                <div class="d-flex justify-content-evenly align-items-center">
+                    <p>Top Loanees</p>
+                    <p>Description</p>
+                </div>
+
+                <div class="d-flex justify-content-evenly align-items-center">
+                    <div class="w-25">
+                        <canvas id="myChart" width="10" height="10"></canvas>
+                    </div>
+
+                    <div class="overview w-25">
+                        <p>
+                            LogRocket automatically aggregates client side errors, JS exceptions, frontend performance
+                            metrics, and user
+                            interactions. Then LogRocket uses machine learning to tell you which problems are affecting
+                            the
+                            most users and provides
+                            the context you need to fix it.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="timely-stats d-flex">
+        <div class="card w-50 me-3">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <p>Monthly lending</p>
+                <p>{% bs_icon 'patch-question' size="1.4rem" %}</p>
+            </div>
+            <div class="card-body">
+                <p class="small">Week 1</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 20%;" aria-valuenow="0"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 2</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuenow="25"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 3</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 4</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card w-50">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <p>Monthly repayments</p>
+                <p>{% bs_icon 'patch-question' size="1.4rem" %}</p>
+            </div>
+            <div class="card-body">
+
+                <p class="small">Week 1</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="0"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 2</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuenow="25"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 3</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 4</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% block scripts %}
+{{block.super}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"> </script>
+
+<script>
+    window.onload = (e) => {
+        const ctx = document.getElementById('myChart');
+
+        const data = {
+            labels: [
+                'John',
+                'Jane',
+                'Doe'
+            ],
+            datasets: [{
+                label: 'My First Dataset',
+                data: [300, 50, 100],
+                backgroundColor: [
+                    'rgb(255, 99, 132)',
+                    'rgb(54, 162, 235)',
+                    'rgb(255, 205, 86)'
+                ],
+                hoverOffset: 4
+            }]
+        };
+
+        new Chart(ctx, {
+            type: 'doughnut',
+            data: data,
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    }
+</script>
+{% endblock scripts %}
 {% endblock content %}
