feat: add loans page

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li class="nav-item mb-2">
-                    <a href="#" class="nav-link text-light">
+                    <a href="{% url 'view_loans' %}" class="nav-link text-light">
                         <svg class="bi me-2" width="16" height="16">
                             {% bs_icon 'table' %}
                         </svg>
