--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% load django_bootstrap5 %}
-{% load bootstrap_icons %}
 {% load static %}
 <html lang="en">
 
@@ -59,7 +58,7 @@
 
             <div>
                 <button class="btn btn-outline-dark">
-                    {% bs_icon 'google' %} Google
+                    <i class="bi-google"></i> Google
                 </button>
             </div>
 
