--- a/templates/logo.html
+++ b/templates/logo.html
@@ -1,2 +1,1 @@
-{% load bootstrap_icons %}
-<span class="logo fs-4"> {% bs_icon 'alt' size="1.8rem" %} <span class="ps-1 fw-bold">LNT</span></span>
+<span class="logo fs-3"> <i class="bi-alt"></i> <span class="ps-1 fw-bold">LNT</span></span>
