--- a/templates/register.html
+++ b/templates/register.html
@@ -51,7 +51,7 @@
 
             <div>
                 <button class="btn btn-outline-dark">
-                    {% bs_icon 'google' %} Google
+                    <i class="bi-google"></i> Google
                 </button>
             </div>
 
