feat: add loan search functionality

--- a/static/css/loans.css
+++ b/static/css/loans.css
@@ -5,3 +5,8 @@
 .total-card h2 {
     color: var(--primarycolor);
 }
+
+.loans-list .search form .form-control:focus {
+        border-color: #28a745;
+        box-shadow: none;
+} 
