--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -28,8 +28,8 @@
 </div>
 
 <div class="container analytics">
-    <div class="top-cards d-flex">
-        <div class="summary-cards">
+    <div class="top-cards d-flex mb-4">
+        <div class="summary-cards mx-auto">
             <div class="card m-2 text-center">
                 <div class="card-body d-flex justify-content-between align-items-center">
                     <div>
@@ -75,10 +75,61 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- <div class="repayed-today">
-            <canvas id="myChart" width="250" height="250"></canvas>
-        </div> -->
+    <div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Activity</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Loans</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Borrowers</a>
+            </li>
+        </ul>
+
+        <div>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Loanee</th>
+                        <th scope="col">Loan from</th>
+                        <th scope="col">Loan maturity</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td scope="col">Mark</td>
+                        <td scope="col">Otto</td>
+                        <td scope="col">@mdo</td>
+                        <td scope="col">Mark</td>
+                        <td scope="col">Otto</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td scope="col">Jacob</td>
+                        <td scope="col">Thornton</td>
+                        <td scope="col">@fat</td>
+                        <td scope="col">Mark</td>
+                        <td scope="col">Otto</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td scope="col">Larry the Bird</td>
+                        <td scope="col">@twitter</td>
+                        <td scope="col">Mark</td>
+                        <td scope="col">Otto</td>
+                        <td scope="col">@mdo</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 </div>
