--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -29,49 +29,19 @@
 
 <div class="container analytics">
     <div class="top-cards d-flex mb-4">
-        <div class="summary-cards mx-auto">
-            <div class="card m-2 text-center">
-                <div class="card-body d-flex justify-content-between align-items-center">
-                    <div>
-                        <small>Total loaned</small>
-                        <p class="fw-bold fs-4">KES 234,3444</p>
-                    </div>
-                    <div class="ms-3">
-                        <i class="bi bi-chevron-right"></i>
-                    </div>
-                </div>
+        <div class="summary-cards d-flex justify-content-center align-items-center">
+            <div>
+                <canvas id="myChart" width="350" height="350"></canvas>
             </div>
-            <div class="card m-2">
-                <div class="card-body d-flex justify-content-between align-items-center">
-                    <div>
-                        <small>Total repaid</small>
-                        <p class="fw-bold fs-4">KES 234,3444</p>
-                    </div>
-                    <div class="ms-3">
-                        <i class="bi bi-chevron-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="card m-2">
-                <div class="card-body d-flex justify-content-between align-items-center">
-                    <div>
-                        <small>Total unrepaid</small>
-                        <p class="fw-bold fs-4">KES 234,3444</p>
-                    </div>
-                    <div class="ms-3">
-                        <i class="bi bi-chevron-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="card m-2">
-                <div class="card-body d-flex justify-content-between align-items-center">
-                    <div>
-                        <small>Top borrower</small>
-                        <p class="fw-bold fs-4">KES 234,3444</p>
-                    </div>
-                    <div class="ms-3">
-                        <i class="bi bi-chevron-right"></i>
-                    </div>
+
+            <div class="card ms-4">
+                <div class="card-body px-5 py-2">
+                    <small>Top borrower</small>
+                    <p class="fw-bold fs-4">
+                        John Doe
+                        <br>
+                        KES 200,000
+                    </p>
                 </div>
             </div>
         </div>
@@ -80,10 +50,7 @@
     <div>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Activity</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Loans</a>
+                <a class="nav-link active" href="#">Loans</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Borrowers</a>
@@ -144,22 +111,23 @@
 
         const data = {
             labels: [
-                'Loaned',
+                'Lended',
                 'Repaid',
+                'Unrepaid'
             ],
             datasets: [{
-                label: 'Loaned vs Repaid',
-                data: [30, 70],
+                label: 'My First Dataset',
+                data: [11, 16, 7],
                 backgroundColor: [
                     'rgb(255, 99, 132)',
-                    'rgb(54, 162, 235)',
-                ],
-                hoverOffset: 4
+                    'rgb(75, 192, 192)',
+                    'rgb(255, 205, 86)',
+                ]
             }]
         };
 
         new Chart(ctx, {
-            type: 'doughnut',
+            type: 'polarArea',
             data: data,
             options: {
                 scales: {
