--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
 
             <div class="card-body">
                 <div class="d-flex justify-content-evenly align-items-center">
-                    <p>Top Loanees</p>
+                    <p>Top Borrowers</p>
                     <p>Description</p>
                 </div>
 
