--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,7 +68,7 @@
             <div class="card-body">
                 <p class="small">Week 1</p>
                 <div class="progress mb-3" style="height: .4rem;">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 20%;" aria-valuenow="0"
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 2%;" aria-valuenow="0"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
 
@@ -85,6 +85,12 @@
                 </div>
 
                 <p class="small">Week 4</p>
+                <div class="progress mb-3" style="height: .4rem;">
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+                </div>
+
+                <p class="small">Week 5</p>
                 <div class="progress mb-3" style="height: .4rem;">
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                         aria-valuemax="100"></div>
